Fix issue where page number selector not visible

--- a/src/App.css
+++ b/src/App.css
@@ -23,18 +23,20 @@
 
 .nasaImage {
   border: black;
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
+  width: auto;
+  height: auto;
 }
 
 .imageCard {
+  background-color: black;
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
   width: 30%;
-  padding-left: 1.5%;
-  padding-right: 1.5%;
+  margin: 1.5%;
   height: 30%;
 }
 
@@ -45,7 +47,7 @@
   justify-content: center;
   width: 80vw;
   height: 80%;
-  padding: 0%;
+  padding: 2.5%;
   margin: 0%;
 }
 
